<resources>
    <string name="app_name">PortalKvantorium</string>
    <string name="timetable">Расписание</string>
    <string name="profile">Профиль</string>
    <string name="fest">Мероприятия</string>
    <string name="chat">Чат</string>

    <string name="enter_title">Название мероприятия:</string>
    <string name="enter_text">Описание мероприятия:</string>

    <string name="take_part">Учавствовать</string>
    <string name="create">Создать</string>
    <string name="date">Дата начала</string>
    <string name="time">Время</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="tab_text_1">Навыки</string>
    <string name="tab_text_2">Достижения</string>

    <string name="prog">Программирование: </string>
    <string name="model">Моделирование: </string>
    <string name="konstr">Конструирование: </string>
</resources>